fixed some ui bugs in the tasks card, card height is now set to a limit, when tasks overflow user can scroll to view more tasks

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,7 @@ html {
 body {
   background: var(--background);
 }
+/* Hiding scrollbar in all cards, i do not know how this works, but it does so fine. */
+::-webkit-scrollbar {
+  width: .1px;
+}
